--- a/app/src/main/res/layout/row_data_teman.xml
+++ b/app/src/main/res/layout/row_data_teman.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:id="@+id/kartuku">
-
+    android:id="@+id/kartuku"
+    card_view:cardElevation="3dp"
+    card_view:cardCornerRadius="5dp"
+    card_view:cardUseCompatPadding="true">
     <LinearLayout
         android:layout_marginTop="20dp"
         android:layout_width="match_parent"
